# redflagweb3

./: .env.production.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bridge  README.md  SECURITY.md  create_react_structure.js  docker-compose.production.yml  docker-compose.yml  generate_dashboard.js  redflag.priv  redflag.pub  render.yaml  task.md
contracts/: BridgeRF.sol  BridgeRFLAG.sol
db1_dag/: db  snap.000000000000D7E3
db1_state/: db  snap.000000000000030D
db1_state/dag/: db  snap.0000000000002B9F
db1_state/state/: db  snap.000000000000242F
db2_dag/: db  snap.0000000000008199
db2_state/: db  snap.000000000000025C
db_test_state/dag/: db  snap.000000000001E3CB
db_test_state/state/: db  snap.000000000001CEC4
deploy/nginx/: redflag.conf
deploy/scripts/: deploy.sh  deploy_contracts.sh
docs/: coingecko-submission.md  validator.md
monitoring/: grafana_dashboard.json  prometheus.yml
redflag-bridge/: Cargo.toml
redflag-bridge/src/: api.rs  evm.rs  main.rs  redflag.rs  relayer.rs  state.rs  types.rs
redflag-cli/: Cargo.toml
redflag-cli/src/: main.rs
redflag-consensus/: Cargo.toml
redflag-consensus/src/: lib.rs  threshold.rs
redflag-consensus/test_persistence_db/: db  snap.000000000000012C  snap.0000000000000156
redflag-consensus/tests/: persistence.rs  threshold_test.rs
redflag-core/: Cargo.toml
redflag-core/src/: lib.rs
redflag-crypto/: Cargo.toml
redflag-crypto/src/: lib.rs  ring.rs  shamir.rs  stealth.rs
redflag-network/: Cargo.toml
redflag-network/src/: identity_manager.rs  lib.rs  main.rs  rpc.rs
redflag-network/test_dag_a/: db
redflag-network/test_db_a/: db
redflag-network/test_db_b/: db
redflag-network/test_sync_dag_a/: db
redflag-network/test_sync_dag_b/: db
redflag-network/test_sync_db_a/: db
redflag-network/test_sync_db_b/: db
redflag-network/tests/: handshake.rs  sync.rs
redflag-rpc/: Cargo.toml
redflag-sdk/: package.json
redflag-sdk/src/: bridge.js  client.js  dex.js  index.js  staking.js  wallet.js
redflag-state/: Cargo.toml
redflag-state/src/: dex.rs  governance.rs  lib.rs  oracle.rs  staking.rs  tokens.rs
redflag-vm/: Cargo.toml
redflag-vm/src/: gas.rs  host_functions.rs  lib.rs
redflag-web/: index.html  package-lock.json  package.json  vite.config.js
redflag-web/public/: install.ps1  install.sh  manifest.json  metadata.json  sdk.json  sw.js  token-list.json  whitepaper.md
redflag-web/src/: App.jsx  crypto.js  index.css  mnemonic.js  sdk.js
redflag_state_db/: db  snap.0000000000000411
solana-bridge/: bridge_relayer.mjs  package.json
solana-metadata/: jupiter-submit.md  wrf-metadata.json
