[workspace]
members = [
    "redflag-core",
    "redflag-crypto",
    "redflag-network",
    "redflag-consensus",
    "redflag-state",
    "redflag-vm",
    "redflag-cli",
]
# redflag-bridge is a separate workspace (see redflag-bridge/Cargo.toml)
# Build with: cd redflag-bridge && cargo build --release
resolver = "2"

[workspace.package]
edition = "2021"
version = "2.1.0"
authors = ["Antigravity AI"]
description = "redflag.web3 - Production Grade Quantum-Resistant Blockchain"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redflag/redflag2.1"

[workspace.dependencies]
libp2p = { version = "0.56", features = ["tcp", "tls", "dns", "tokio", "noise", "yamux", "quic", "gossipsub", "kad", "identify", "macros", "autonat", "relay", "json", "request-response", "cbor", "mdns"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
bincode = { version = "2", features = ["serde"] }
blake3 = "1.5"
sha2 = "0.10"
zeroize = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
aws-lc-rs = { version = "1.10.0", features = ["unstable"] }
hex = "0.4"
dashmap = "5.5"
thiserror = "1.0"
futures = "0.3"
anyhow = "1.0"
serde_json = "1.0"
sled = "0.34"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.8"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
