[workspace]
members = ["."]
resolver = "2"

[package]
name = "redflag-bridge"
version = "2.1.0"
edition = "2021"
authors = ["Antigravity AI"]
license = "MIT OR Apache-2.0"
description = "RedFlag 2.1 — Cross-chain bridge relayer (EVM ↔ RedFlag)"

[[bin]]
name = "redflag-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }
hex = "0.4"
sled = "0.34"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
dashmap = "5.5"
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
