[package]
name = "redflag-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
redflag-core = { path = "../redflag-core" }
redflag-crypto = { path = "../redflag-crypto" }
redflag-consensus = { path = "../redflag-consensus" }
redflag-state = { path = "../redflag-state" }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
rayon = { workspace = true }
sha3 = { workspace = true }
chrono = { workspace = true }
aws-lc-rs = { version = "1.10.0", features = ["unstable"] }
dashmap = { workspace = true }
axum-server = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
reqwest = { workspace = true }
