[package]
name = "redflag-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
redflag-core = { path = "../redflag-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
