[package]
name = "redflag-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
redflag-core = { path = "../redflag-core" }
serde = { workspace = true }
postcard = { workspace = true }
sled = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
redflag-vm = { path = "../redflag-vm" }
redflag-crypto = { path = "../redflag-crypto" }
